<resources>
    <string name="app_name">MedHelp</string>

    <string name="hint_search">Médico ou especialidade</string>

    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_doctor_type">Especialidade</string>
    <string name="hint_crm_number">CRM Número</string>
    <string name="hint_crm_uf">CRM Estado</string>
    <string name="hint_address">Endereço</string>
    <string name="hint_streetName">Rua</string>
    <string name="hint_zipCode">CEP</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_state">Estado</string>
    <string name="hint_country">País</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_password">Senha</string>
    <string name="hint_passwordConfirmation">Confirmação de senha</string>
    <string name="hint_forgotPassword">Esqueceu sua senha?</string>
    <string name="login">Entrar</string>
    <string name="button_sign_up">Cadastre-se</string>
    <string name="sign_up">Cadastrar</string>

    <string name="hint_punctuality">Pontualidade</string>
    <string name="hint_attention">Atenção</string>
    <string name="hint_location">Instalações</string>

    <string name="patient">Paciente</string>
    <string name="doctor">Médico</string>

    <string name="save">Salvar</string>
    <string name="add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="go_back">Voltar</string>

    <string name="body_part">Parte do corpo</string>
    <string name="problem">Problema</string>
    <string name="description">Descrição do problema</string>
    <string name="severity">Severidade</string>
    <string name="low">Baixa</string>
    <string name="medium">Média</string>
    <string name="high">Alta</string>

    <string name="description_logo">Imagem do logo MedHelp</string>
    <string name="description_icon_profile">Icone de perfil</string>
    <string name="description_icon_email">Icone de email</string>
    <string name="description_icon_crm">Icone de CRM</string>
    <string name="description_icon_location">Icone de mapa</string>
    <string name="description_icon_phone">Icone de telefone</string>
    <string name="description_icon_body">Icone da visualização do corpo humano do usuário</string>

    <string name="description_human_body">Corpo humano</string>

    <string name="schedule_appointment">Marcar consulta</string>
    <string name="evaluate">Opinar</string>
    <string name="evaluations">Opiniões</string>
    <string name="evaluate_list">Ver opiniões</string>
    <string name="general">Geral</string>
    <string name="comment">Comentário</string>
    <string name="comments">Comentários</string>

    <string name="availabilities">Horários de atendimento</string>
    <string name="add_availability">Adicionar horário</string>
    <string name="start_hour">Horário de início</string>
    <string name="end_hour">Horário final</string>
    <string name="hint_start_hour">08:00</string>
    <string name="hint_end_hour">12:00</string>

    <string name="new_post">Nova postagem</string>
    <string name="post">Postar</string>
    <string name="new_comment">Novo comentário</string>
    <string name="to_comment">Comentar</string>

    <string-array name="user_type">
        <item>Paciente</item>
        <item>Médico</item>
    </string-array>

    <string-array name="titles_patientTab">
        <item>Perfil</item>
        <item>Médicos</item>
        <item>Arquivos</item>
        <item>Social</item>
    </string-array>

    <string-array name="titles_doctorTab">
        <item>Perfil</item>
        <item>Pacientes</item>
        <item>Consulta</item>
        <item>Social</item>
    </string-array>

    <string-array name="body_parts">
        <item>Cabeça</item>
        <item>Peito</item>
        <item>Abdómem</item>
        <item>Braço direito</item>
        <item>Braço esquerdo</item>
        <item>Perna direita</item>
        <item>Perna esquerda</item>
    </string-array>

    <string name="title_activity_edit_patient_profile">Editar Perfil</string>
    <string name="title_activity_edit_doctor_profile">Editar Perfil</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_patient_human_body">Corpo Humano</string>
    <string name="title_activity_prescribe">PrescribeActivity</string>

</resources>
