<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/body_part"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:id="@+id/spinner_body_part"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/input_problem"
            android:hint="@string/problem"
            android:textColor="@color/colorText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/input_description"
            android:hint="@string/description"
            android:textColor="@color/colorText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/severity"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/group_severity_problem"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/low"
            android:id="@+id/radio_severity_low"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/medium"
            android:id="@+id/radio_severity_medium" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/high"
            android:id="@+id/radio_severity_high" />
    </RadioGroup>
</LinearLayout>