<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_weekday_addAvailability"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_availability"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_weekday_addAvailability"
        android:layout_marginBottom="@dimen/default_margin"
        android:id="@+id/spinner_doctor_availability"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/spinner_doctor_availability"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layout_start_date">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:id="@+id/input_start_hour_addAvailability"
                android:hint="@string/start_hour"
                android:text="@string/hint_start_hour"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layout_end_date">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:id="@+id/input_end_hour_addAvailability"
                android:hint="@string/end_hour"
                android:text="@string/hint_end_hour"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>