<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.patient.EditPatientProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/blank_profile"
        android:id="@+id/image_profile_editPatientProfile"
        android:layout_width="@dimen/image_profile_width"
        android:layout_height="@dimen/image_profile_height"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image_profile_editPatientProfile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/row_name_editPatientProfile"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="@dimen/material_icons"
                    android:layout_height="@dimen/material_icons"
                    android:id="@+id/icon_profile_patient"
                    android:background="@drawable/ic_account_circle_white_24dp"
                    android:contentDescription="@string/description_icon_profile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name_editPatientProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/hint_name"
                        android:id="@+id/input_name_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/row_mail_editPatientProfile"
                android:layout_below="@+id/row_name_editPatientProfile"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="@dimen/material_icons"
                    android:layout_height="@dimen/material_icons"
                    android:id="@+id/icon_email_editPatientProfile"
                    android:background="@drawable/ic_mail_white_24dp"
                    android:contentDescription="@string/description_icon_email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email_editPatientProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:hint="@string/hint_email"
                        android:id="@+id/input_email_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/row_address_editPatientProfile"
                android:layout_below="@id/row_mail_editPatientProfile"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="@dimen/material_icons"
                    android:layout_height="@dimen/material_icons"
                    android:id="@+id/icon_address_editPatientProfile"
                    android:background="@drawable/ic_location_on_white_24dp"
                    android:contentDescription="@string/description_icon_location" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_streetName_editPatientProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/hint_streetName"
                        android:id="@+id/input_streetName_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_location_editPatientProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:hint="@string/hint_zipCode"
                        android:id="@+id/input_zipCode_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/row_location_editPatientProfile"
                android:layout_below="@id/row_address_editPatientProfile"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_centerHorizontal="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_city_editPatientProfile"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/material_icons">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/hint_city"
                        android:id="@+id/input_city_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_state_editPatientProfile"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/hint_state"
                        android:id="@+id/input_state_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_country_editPatientProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/hint_country"
                        android:id="@+id/input_country_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/row_phone_editPatientProfile"
                android:layout_below="@+id/row_location_editPatientProfile"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="@dimen/material_icons"
                    android:layout_height="@dimen/material_icons"
                    android:id="@+id/icon_phone_editPatientProfile"
                    android:background="@drawable/ic_call_white_24dp"
                    android:contentDescription="@string/description_icon_phone" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone_editPatientProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:hint="@string/hint_phone"
                        android:id="@+id/input_phone_editPatientProfile"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorText"
                        android:textColorHint="@color/colorText"/>

                </android.support.design.widget.TextInputLayout>
            </TableRow>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_save_editPatientProfile"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorButton"
        android:textColor="@color/colorText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_save_editPatientProfile"
        android:layout_toStartOf="@+id/button_save_editPatientProfile"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/cancel"
        android:id="@+id/button_cancel_editPatientProfile"
        android:background="@color/colorText"
        android:textColor="@color/colorButton" />

</RelativeLayout>
